# memory-scanner

./: .coveragerc  .gitignore  .pylintrc  README.md  main.py  project_spec.md  pyproject.toml  setup.py  tasks.py
documentation/: architecture.md  hours_spent.md  manual.md  project_spec.md
laskarit/: README.md
laskarit/week1/: gitlog.txt  komentorivi.txt
laskarit/week2/kassapaate/src/: maksukortti.py
laskarit/week2/kassapaate/unicafe/: .coveragerc  pyproject.toml
laskarit/week2/kassapaate/unicafe/src/: index.py  maksukortti.py
laskarit/week2/kassapaate/unicafe/src/tests/: maksukortti_test.py
laskarit/week2/maksukortti/: .coverage  .coveragerc  pyproject.toml  tasks.py
laskarit/week2/maksukortti/src/: maksukortti.py
laskarit/week2/maksukortti/src/tests/: maksukortti_test.py
laskarit/week2/unicafe/src/: kassapaate.py
laskarit/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: Memory.py  Type.py  Value.py  binary_io.py  index.py  memory.py  type.py  value.py
src/c_extensions/: memory.c  memory.cpp  memory.h
src/core/: __init__.py  binary_io.py  memory.py  value.py
src/gui/: MainWindow.py  main_window.py
src/gui/delegates/: __init__.py  type_delegate.py
src/gui/dialogs/: ProcessView.py  process_view.py  write_form.py
src/gui/items/: tree_item.py
src/gui/models/: FoundAddressModel.py  ProcessViewModel.py  found_address_model.py  process_view_model.py  saved_address_model.py
src/gui/threads/: saved_results_thread.py  update_scanresult.py
src/gui/ui/: mainwindow.py  mainwindow.ui
src/gui/ui/dialogs/: processview.py  processview.ui  write_form.py  write_form.ui
src/gui/ui/widgets/: mainwindow.py  mainwindow.ui
src/gui/views/: saved_address_view.py
src/memory/: binary_io.py  memory.py  type.py  value.py
src/tests/: binaryio_test.py  memory_test.py  type_test.py
