[tool.poetry]
name = "ot"
version = "0.1.0"
description = "A memory scanner"
authors = ["Viktor Horsmanheimo <viktor.horsmanheimo@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
pybind11 = "^2.6.2"
psutil = "^5.8.0"
invoke = "^1.5.0"
pytest-mock = "^3.5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
