[tool.poetry]
name = "ot"
version = "0.1.0"
description = "A memory scanner"
authors = ["Viktor Horsmanheimo <viktor.horsmanheimo@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.15.4"
psutil = "^5.8.0"
invoke = "^1.5.0"
PyQt5-stubs = "^5.15.2"
pyinstaller = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pytest-mock = "^3.5.1"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
